# FastText_Shop

./: .gitignore  LICENSE  README.md  addtag.sh  commit.sh  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-publish.yml  release.yml
fasttext_shop/: FastText_Shop.py  TextShop_sklearn.py  __init__.py  fasttext_shop.py  stopwords.txt  utils.py
toutiao/: excert_data.py
